--- a/index.css
+++ b/index.css
@@ -861,6 +861,9 @@ input:focus {
     .header-main {
         height: 60px;
     }
+    .header-menu.show {
+        margin-top: 60px;
+    }
     .main {
         margin-top: 60px;
     }
@@ -899,6 +902,10 @@ input:focus {
     .about-cat-line {
         margin-bottom: 0px;
     }
+    .about-mail {
+        padding-top: 20px;
+    }
+
     .cat {
         width: 100%;
         margin-bottom: 5px;
