--- a/index.css
+++ b/index.css
@@ -209,8 +209,8 @@ input:focus {
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 70px;
-    padding-bottom: 90px;
+    padding-top: 160px;
+    padding-bottom: 154px;
 }
 
 .info-logo {
@@ -875,7 +875,10 @@ input:focus {
     }
 }
 @media (max-width:550px) {
-    
+    .info {
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
     .info-logo {
         width: 270px;
         height: 270px;
