--- a/index.css
+++ b/index.css
@@ -143,7 +143,10 @@ input:focus {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
 
+.fake-logo {
+    display: none;
 }
 
 .header-menu {
@@ -770,6 +773,47 @@ input:focus {
     }
 }  
 @media  (max-width:950px){
+    /* .header-burger .icon-bx {
+        position: absolute;
+        top: -20px;
+        left: -80px;
+    }
+    .header-burger .icon-sr {
+        position: absolute;
+        top: -20px;
+        left: -130px;
+    } */
+
+    /* .header-main {
+        position: relative;
+    }
+    .icon-bx {
+        display: block;
+
+        position: absolute;
+        top: -60px;
+        right: 60px;
+        z-index: 10;
+
+        cursor: pointer;
+    } */
+
+    .header-main {
+        position: relative;
+    }
+    .fake-logo {
+        display: flex;
+        position: absolute;
+        right: 70px;
+        z-index: 10;
+    }
+    .fake-logo .icon-bx, .fake-logo .icon-sr {
+        padding: 28px 20px;
+        line-height: 0;
+    }
+    
+
+
 
 
     .header-burger {
@@ -850,8 +894,8 @@ input:focus {
     .header-fake {
         display: none;
     }
-    a.icon-bx, a.icon-sr {
-        padding: 10px 20px;
+    li a.icon-bx, li a.icon-sr {
+        display: none;
     }
     .main {
         margin-top: 80px;
@@ -861,6 +905,12 @@ input:focus {
     .header-main {
         height: 60px;
     }
+
+    .fake-logo .icon-bx, .fake-logo .icon-sr {
+        padding: 19px 20px;
+        line-height: 0;
+    }
+
     .header-menu {
         margin: 60px 0 0 0;
     }
@@ -875,6 +925,10 @@ input:focus {
     }
 }
 @media (max-width:550px) {
+    .fake-logo {
+        right: 50px;
+    }
+
     .info {
         padding-top: 100px;
         padding-bottom: 100px;
